--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flatten-sol",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "flatten-sol command-line tool.",
   "license": "MIT",
   "repository": "https://github.com/ngduc/flatten-sol",
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "build": "cp -R ./node_modules/openzeppelin-solidity/contracts/ ./",
-    "test": "npx rimraf testdir && ava",
+    "test": "npx rimraf out && ava",
     "prepublishOnly": "npm run build"
   },
   "files": [
