--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flatten-sol",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "flatten-sol command-line tool.",
   "license": "MIT",
   "repository": "https://github.com/ngduc/flatten-sol",
@@ -13,9 +13,10 @@
     "flatten-sol": "index.js"
   },
   "scripts": {
-    "build": "cp -R ./node_modules/openzeppelin-solidity/contracts/ ./",
-    "test": "npx rimraf out && ava",
-    "prepublishOnly": "npm run build"
+    "build": "echo --- TBD: build command",
+    "cp-files": "cp -R ./node_modules/openzeppelin-solidity/contracts/ ./",
+    "test": "npx rimraf out && npm run cp-files && ava",
+    "prepublishOnly": "npm run cp-files"
   },
   "files": [
     "index.js",
